<resources>
    <string name="app_name">MusicStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_store">Music Store</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_to_musicstore">Welcome to MusicStore</string>
    <string name="welcome_text">Thank you for downloading the app we hope you enjoy our services!</string>
    <string name="next">Next</string>
    <string name="how_it_works">How it works</string>
    <string name="get_started">Get Started</string>
    <string name="instruction_note">Add items to the store by clicking the floating icon + and inputting the details of each item</string>
    <string name="name">Name:</string>
    <string name="album_name">Album:</string>
    <string name="artist_name">Artist:</string>
    <string name="year">Year:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>