<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".title.TitleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/titleImage"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_small"
                android:scaleType="fitCenter"
                android:src="@drawable/second"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/usernameText"
                style="@style/editStyle"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleImage"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/passwordText"
                style="@style/editStyle"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameText" />

            <Button
                android:id="@+id/loginButton"
                style="@style/textStyle"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:background="@color/primaryDark"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordText" />

            <Button
                android:id="@+id/registerButton"
                style="@style/textStyle"
                android:text="@string/register"
                android:background="@android:color/white"
                android:textColor="@color/primaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>